fix the photo issues... i think?

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="wrapper">
 
 	<header>
-		<img src="C:\Users\falit\Desktop\bapu.png">
+		<img src="css\bapu.png">
 		<h1>Anupreet Sehgal</h1>
 	</header>
 	<div class="content">
@@ -23,12 +23,12 @@
 			<li>-He forgives people for their mistakes and doesnt hold a grudges</li>
 			<li>-And in the most loveable and respectable guy you or I will ever know</li>
 		</ol>
-		<img class="big images" src="C:\Users\falit\Desktop\SmartSelect_20180603-170242_Gallery.jpg">
+		<img class="big images" src="css\SmartSelect_20180603-170242_Gallery.jpg">
 		<p class="caption">This is Anu on a plane ride with me to India where we had a blast talking and falling asleep on each others shoulders😄
 			
 		</p>
 		<h2>Anupreet's Family</h2>
-		<img src="C:\Users\falit\Desktop\dope family photo.png">
+		<img src="css\dope family photo.png">
 		<ul>
 			<li><a href="https://www.facebook.com/falit.sehgal" target="_blank" title="Visit the beast of a kid who made this page" >Falit Sehgal</a></li>
 			<li><a href="https://www.facebook.com/pam.dhawan" target="_blank" title="See the women behind this amazing man who is the same, but just a little lazy" >Priyanka Dhawan</a></li>
