--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Best Dad EVER!!!</title>
-	<link rel="stylesheet" type="text/css" href="css/hero-dad.css">
+	<link rel="stylesheet" type="text/css" href="css/Hero-dad.css">
 </head>
 <body>
 <div class="wrapper">
