--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="wrapper">
 
 	<header>
-		<img src="css/bapu.png">
+		<img src="css/bapu.PNG">
 		<h1>Anupreet Sehgal</h1>
 	</header>
 	<div class="content">
@@ -28,7 +28,7 @@
 			
 		</p>
 		<h2>Anupreet's Family</h2>
-		<img src="css/dope family photo.png">
+		<img src="css/dope family photo.PNG">
 		<ul>
 			<li><a href="https://www.facebook.com/falit.sehgal" target="_blank" title="Visit the beast of a kid who made this page" >Falit Sehgal</a></li>
 			<li><a href="https://www.facebook.com/pam.dhawan" target="_blank" title="See the women behind this amazing man who is the same, but just a little lazy" >Priyanka Dhawan</a></li>
