--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			
 		</p>
 		<h2>Anupreet's Family</h2>
-		<img class="crop" src="css/dope family photo 2.JPG">
+		<img class="crop" src="css/dope family photo 2.jpg">
 		<ul>
 			<li><a href="https://www.facebook.com/falit.sehgal" target="_blank" title="Visit the beast of a kid who made this page" >Falit Sehgal</a></li>
 			<li><a href="https://www.facebook.com/pam.dhawan" target="_blank" title="See the women behind this amazing man who is the same, but just a little lazy" >Priyanka Dhawan</a></li>
