--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Happy Father's Day!
 			
 		</p>
 		<h2>Anupreet's Family</h2>
-		<img class="crop" src="css/dope family photo 2.jpg">
+		<img class="crop" src="css/dope family photo 2.JPG">
 		<ul>
 			<li><a href="https://www.facebook.com/surinder.dhawan.10" target="_blank" title="Anu's father in law" >Surinder Dhawan</a></li>
 			<li><a href="https://www.facebook.com/premlata.dhawan" target="_blank" title="Anu's Mother in Law">Premlata Dhawan</a></li>
