--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Happy Father's Day!
 			<li><a href="https://www.facebook.com/surinder.dhawan.10" target="_blank" title="Anu's father in law" >Surinder Dhawan</a></li>
 			<li><a href="https://www.facebook.com/premlata.dhawan" target="_blank" title="Anu's Mother in Law">Premlata Dhawan</a></li>
 			<li><a href="https://www.facebook.com/pam.dhawan" target="_blank" title="See the women behind this amazing man who is the same, but just a little lazy" >Priyanka Dhawan</a></li>
-			<li><a href="https://www.facebook.com/anupreet.sehgal" target="_blank" title="Go to the best dad EVER" >The Man of The Day Anu Himself</a></li>
+			<li><a href="https://www.facebook.com/anupreet.sehgal" target="_blank" title="Go to the best dad EVER" >The Best Bapu ever = Anu </a></li>
 			<li><a href="https://www.facebook.com/meenu.takkar.33" target="_blank" title="Anu's Sister in Law">Meenu Takkar</a></li>
 			<li><a href="https://blank.org/" target="_blank" title="Luck Pup brother in law to Anu">Rahul Dhawan</a></li>
 	</div>
