--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Happy Father's Day!
 	<footer>
 		<ul>
 			<li>Made by <a href="https://www.instagram.com/falitsehgal/?hl=en" target="_blank" title="My Social Media" > Falit Sehgal</a> </li>
-			<li>&copy; 2018</li>
+			<li>&copy; 2018-2019</li>
 		</ul>
 	</footer>
 </div>
